ajuste en contacto

--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
         </div>
         <div class="row block-9">
 
-          <div class="col-md-6" id="map"></div>
+          <!-- <div class="col-md-6" id="map"></div>-->
         </div>
             <section class="ftco-section-3 img" style="background-image: url(images/event-2.jpg);">
       <div class="overlay"></div>
