ajuste en galeria

--- a/gallery.html
+++ b/gallery.html
@@ -129,12 +129,12 @@ Estas imágenes son una ventana a nuestro trabajo y a la relación viva y consta
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
-		    	<a href="images/image_1.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/image_4.jpg);">
+		    	<a href="images/image_4.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/image_4.jpg);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
-		    	<a href="images/image_2.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/event-4.jpg);">
+		    	<a href="images/event-4.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/event-4.jpg);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
