--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ Goethe. </h3>
 
     <section class="ftco-gallery">
     	<div class="d-md-flex">
-	    	<a href="images/image_4.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/image_4.jpg;">
+	    	<a href="images/image_4.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/image_4.jpg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
 	    		</div>
