--- a/blog-single.html
+++ b/blog-single.html
@@ -86,34 +86,26 @@
             <p>Se trata de generar un efecto “bola de nieve”, no quedar en la actividad sino siempre buscar una “altísima existencia”, tanto en lo empresarial como en lo personal. Lejos de lógicas humanitaristas o de explotación, por el contrario, desde el respeto, fomentar el hacer, con el principio máximo de respeto por la vida y la biodiversidad.
             </p>
               <img src="images/image_3.jpg" alt="" class="img-fluid">          
-            </p>                
-            <h2 class="mb-3 mt-5">El Muro en Movimiento.</h2>
-            <p>Este es un espacio de comunicación para resaltar o discutir sobre temáticas que atañen al espíritu de la organización, que fortalecen el “Ka”.</p>
+            </p>   
+                        </p>                    
+            <h2 class="mb-3 mt-5">Amor por el pedazo</h2>
+            <p>El pasado 7 de febrero, en la localidad de San Cristóbal, Bogotá, ciudadanos de la comunidad del sector se movilizaron para actuar frente al asedio de las basuras. Con el acompañamiento de las administraciones de conjuntos residenciales aledaños y de la Corporación Movimiento K, se logró el embellecimiento de un espacio público y verde conocido como “La Palomera”, con el propósito de fortalecer el sentido de pertenencia.</p>
 
-            <p>Fragmentos de “Elogio de la dificultad” escrito por Estanislao Zuleta. (Texto para obtener el doctorado Honoris Causa en Psicología en la Universidad del Valle el 17 de febrero de 1990)</p>
+            <p>Durante décadas, este lugar —ubicado entre conjuntos residenciales, viviendas y colegios— fue utilizado de manera inadecuada como vertedero de basuras, escombros y excrementos de mascotas, hasta el punto de formarse capas de plástico bajo la tierra y convertirse en foco de plagas.</p>
  
-            <p>Elogio a la dificultad es un texto que debería ser pregonado en cualquier centro de construcción de pensamiento dentro del territorio nacional, invita a reflexionar sobre la importancia de respetar y valorar la diferencia; a escaparnos del facilismo que ha impreso en el alma colombiana el drama del narcotráfico, porque lo difícil no es lo que se debe evitar; dice un refrán de la sabiduría popular colombiana: “el que la sufre la goza”. A continuación se presentan algunos fragmentos más relevantes de la obra del pensador:</p>
+            <p>Hoy, “La Palomera” se transforma en “La Huerta de los Polinizadores”, inspirada en la fauna y flora de los Cerros Orientales y de la localidad de San Cristóbal, posiblemente la más verde del sur de la ciudad. Esta iniciativa se inspira en la labor de aves e insectos polinizadores, responsables de la reproducción de las plantas y fundamentales para la alimentación humana.</p>
 
-            <p>…La pobreza y la impotencia de la imaginación nunca se manifiestan de una manera tan clara como cuando se trata de imaginar la felicidad. Entonces comenzamos a inventar paraísos, islas afortunadas, países de cucaña. Una vida sin riesgos, sin lucha, sin búsqueda de superación y sin muerte. Y por tanto, también sin carencias y sin deseo: un océano de mermelada sagrada, una eternidad de aburrición. Metas afortunadamente inalcanzables, paraísos afortunadamente inexistentes.</p>
+            <p>El mismo 7 de febrero se contó, además, con el acompañamiento de la @policiacomunitaria y la @UAESP. Más allá de la institucionalidad —de la cual aún se requiere mayor compromiso—, se resalta la participación de las personas de carne y hueso que hacen parte de estas entidades. Entre todos se realizó la recolección de residuos, la siembra de especies nativas y ornamentales como lavanda, campanilla, siete cueros, suculentas, chochos y mermelada, esta última símbolo de prosperidad y felicidad para algunos pueblos de Suramérica. Finalmente, se pintó una valla con colores vivos, en alusión al cuidado de la biodiversidad.</p>
 
-            <p>Todas estas fantasías serían inocentes e inocuas, si no fuera porque constituyen el modelo de nuestros anhelos en la vida práctica. Aquí mismo, en los proyectos de la existencia cotidiana, más acá del reino de las mentiras eternas, introducimos también el ideal tonto de la seguridad garantizada, de las reconciliaciones totales, de las soluciones definitivas. Puede decirse que nuestro problema no consiste sólo, ni principalmente, en que no seamos capaces de conquistar lo que nos proponemos, sino en aquello que nos proponemos: que nuestra desgracia no está tanto en la frustración de nuestros deseos, como en la forma misma de desear. Deseamos mal. En lugar de desear una relación humana inquietante, compleja y perdible, que estimule nuestra capacidad de luchar y nos obligue a cambiar, deseamos un idilio sin sombras y sin peligros, un nido de amor y, por lo tanto, en última instancia, un retorno al huevo.</p>
+            <p>Se espera poder organizar próximamente un compartir, un “canelazo”, que celebre la acción colectiva y el respeto por la biodiversidad, como parte del derecho a una vida digna. #vidadigna</p>
 
-            <p>En vez de desear una sociedad en la que sea realizable y necesario trabajar arduamente para hacer efectivas nuestras posibilidades, deseamos un mundo de satisfacción, una monstruosa sala-cuna de abundancia pasivamente recibida. En lugar de desear una filosofía llena de incógnitas y preguntas abiertas, queremos poseer una doctrina global, capaz de dar cuenta de todo, revelada por espíritus que nunca han existido o por caudillos que desgraciadamente sí han existido. Adán y sobre todo Eva, tienen el mérito original de habernos liberado del paraíso, nuestro pecado es que anhelamos regresar a él. Desconfiemos de las mañanas radiantes en las que se inicia un reino milenario. Son muy conocidos en la historia, desde la Antigüedad hasta hoy, los horrores a los que pueden y suelen entregarse los partidos provistos de una verdad y de una meta absolutas, las iglesias cuyos miembros han sido alcanzados por la gracia —por la desgracia— de alguna revelación.</p>
+            <p>https://www.instagram.com/p/DUmD2cpDu-d/?igsh=MW9ocXdmMHh0OWcwbg==</p>
 
-            <p>El estudio de la vida social y de la vida personal nos enseña cuán próximos se encuentran una de otro la idealización y el terror. La idealización del fin, de la meta y el terror de los medios que procurarán su conquista.</p>
-
-            <p>No se puede respetar el pensamiento del otro, tomarlo seriamente en consideración, someterlo a sus consecuencias, ejercer sobre él una crítica, válida también en principio para el pensamiento propio, cuando se habla desde la verdad misma, cuando creemos que la verdad habla por nuestra boca; porque entonces el pensamiento del otro sólo puede ser error o mala fe; y el hecho mismo de su diferencia con nuestra verdad es prueba contundente de su falsedad, sin que se requiera ninguna otra.</p>
-
-            <p>Lo más difícil, lo más importante, lo más necesario, lo que de todos modos hay que intentar, es conservar la voluntad de luchar por una sociedad diferente sin caer en la interpretación paranoide de la lucha. Lo difícil, pero también lo esencial es valorar positivamente el respeto y la diferencia, no como un mal menor y un hecho inevitable, sino como lo que enriquece la vida e impulsa la creación y el pensamiento, como aquello sin lo cual una imaginaria comunidad de los justos cantaría el eterno hosanna del aburrimiento satisfecho.</p>
-
-            <p>Hay que poner un gran signo de interrogación sobre el valor de lo fácil; no solamente sobre sus consecuencias, sino sobre la cosa misma, sobre la predilección por todo aquello que no exige de nosotros ninguna superación, ni nos pone en cuestión, ni nos obliga a desplegar nuestras posibilidades. Hay que observar con cuánta desgraciada frecuencia nos otorgamos a nosotros mismos, en la vida personal y colectiva, la triste facilidad de ejercer lo que llamaré una no reciprocidad lógica; es decir, el empleo de un método explicativo completamente diferente cuando se trata de dar cuenta de los problemas, los fracasos y los errores propios y los del otro cuando es adversario o cuando disputamos con él.</p>
-
-            <p>La difícil tarea de aplicar un mismo método explicativo y crítico a nuestra posición y a la opuesta no significa desde luego que consideremos equivalentes las doctrinas, las metas y los intereses de las personas, los partidos, las clases y las naciones en conflicto. Significa por el contrario que tenemos suficiente confianza en la superioridad de la causa que defendemos, como para estar seguros de que no necesita, ni le conviene esa doble falsificación con la cual, en verdad, podría defenderse cualquier cosa.</p>
-
-            <p>Dostoievski nos enseñó a mirar hasta dónde van las tentaciones de tener una fácil relación interhumana: van sólo en el sentido de buscar el poder, ya que si no se puede lograr una amistad respetuosa en una empresa común se produce lo que Bahro llama intereses compensatorios: la búsqueda de amos, el deseo de ser vasallos, el anhelo de encontrar a alguien que nos libere de una vez por todas del cuidado de que nuestra vida tenga un sentido. Dostoievski entendió, hace más de un siglo, que la dificultad de nuestra liberación procede de nuestro amor a las cadenas. Amamos las cadenas, los amos, las seguridades porque nos evitan la angustia de la razón.</p>
-
-            <p>Pero en medio del pesimismo de nuestra época se siguen desarrollando el pensamiento histórico, el psicoanálisis, la antropología, el marxismo, el arte y la literatura. En medio del pesimismo de nuestra época surge la lucha de los proletarios que ya saben que un trabajo insensato no se paga con nada, ni con automóviles ni con televisores; surge la rebelión magnífica de las mujeres que no aceptan una situación de inferioridad a cambio de halagos y protecciones; surge la insurrección desesperada de los jóvenes que no pueden aceptar el destino que se les ha fabricado. Este enfoque nuevo nos permite decir como Fausto: “También esta noche, Tierra, permaneciste firme. Y ahora renaces de nuevo a mi alrededor. Y alientas otra vez en mí la aspiración de luchar sin descanso por una altísima existencia”.</p>
-              <img src="images/image_5.jpg" alt="" class="img-fluid">
+            <p> <img src="images/image_12.jpg" alt="" class="img-fluid"></p>   
+            </p>  <img src="images/image_5.jpg" alt="" class="img-fluid"></p>
+            </p>  <img src="images/image_8.jpg" alt="" class="img-fluid"></p>
+            </p>  <img src="images/image_9.jpg" alt="" class="img-fluid"></p>
+            </p>  <img src="images/cause-4.jpg" alt="" class="img-fluid">          
             </p>
             <p>            
           </div> <!-- .col-md-8 -->
@@ -222,7 +214,6 @@
               <div class="block-23 mb-3">
                 <ul>
                   <li><span class="icon icon-map-marker"></span><span class="text">movimientok.org Bogotá, Colombia</span></li>
-                  <li><span class="icon icon-phone"></span><span class="text">+57 312 311 0846</span></a></li>
                   <li><span class="icon icon-envelope"></span><span class="text">corporacion@movimientok.org pensarpoetico.mk@gmail.com</span></a></li>
                 </ul>
               </div>
