--- a/about.html
+++ b/about.html
@@ -258,7 +258,7 @@
               <div class="block-23 mb-3">
                 <ul>
                   <li><span class="icon icon-map-marker"></span><span class="text">movimientok.org Bogotá, Colombia</span></li>
-                  <li><span class="icon icon-phone"></span><span class="text">+57 312 311 0846</span></a></li>
+  <!-- <li><span class="icon icon-phone"></span><span class="text">+57 312 311 0846</span></a></li>          </div>-->
                   <li><span class="icon icon-envelope"></span><span class="text">corporacion@movimientok.org pensarpoetico.mk@gmail.com</span></a></li>
                 </ul>
               </div>
