--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
             <p><span>Ubicación:</span> "Bogotá, Colombia" </p>
           </div>
           <div class="col-md-3">
-            <p><span>Teléfono:</span> <a href="tel://573000000000">+57 312 311 0846</a></p>
+    <!-- <p><span>Teléfono:</span> <a href="tel://573000000000">+57 312 311 0846</a></p> -->
           </div>
           <div class="col-md-3">
             <p><span>correo electrónico:</span> <a href="mailto:corporacion@movimientok.org">corporacion@movimientok.org</a></p>
@@ -177,7 +177,7 @@
               <div class="block-23 mb-3">
                 <ul>
                   <li><span class="icon icon-map-marker"></span><span class="text">movimientok.org Bogotá, Colombia</span></li>
-                  <li><span class="icon icon-phone"></span><span class="text">+57 312 311 0846</span></a></li>
+    <!-- <li><span class="icon icon-phone"></span><span class="text">+57 312 311 0846</span></a></li> -->
                   <li><span class="icon icon-envelope"></span><span class="text">corporacion@movimientok.org pensarpoetico.mk@gmail.com</span></a></li>
                 </ul>
               </div>
